; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_memory.c_PicoWrite8_mcd_io.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_memory.c_PicoWrite8_mcd_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_CDREGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"m68k_regs w8:  [%02x]   %02x @%06x\00", align 1
@SekPc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoWrite8_mcd_io(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 65280
  %7 = icmp eq i32 %6, 8192
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load i32, i32* @EL_CDREGS, align 4
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 63
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @SekPc, align 4
  %14 = call i32 @elprintf(i32 %9, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @m68k_reg_write8(i32 %15, i32 %16)
  br label %22

18:                                               ; preds = %2
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @PicoWrite8_io(i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %18, %8
  ret void
}

declare dso_local i32 @elprintf(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @m68k_reg_write8(i32, i32) #1

declare dso_local i32 @PicoWrite8_io(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
